# library-manager-rust

./: .env  Cargo.toml  README.md  diesel.toml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2025-03-05-143515_update_tables_arrays/: down.sql  up.sql
migrations/2025-03-07-074913_remove_unused_fields/: down.sql  up.sql
src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs  schema.rs
static/: index.html
static/LiMa_files/: lima-543c04.webflow.b10d8c887.css  script.js
static/author/: ShowAll.html  new.html
static/author/ShowAll_files/: script.js
static/author/new_files/: script.js
static/book/: New.html  ShowAll.html  ShowDeleted.html
static/book/AddNew_files/: script.js  showall.webflow.shared.f3119643a.css
static/book/ShowAll_files/: script.js  showall.webflow.92ef7fe06.css
static/publisher/: ShowAll.html  new.html
static/publisher/ShowAll_files/: script.js
static/publisher/new_files/: script.js  showall.webflow.shared.1039732c4.css
static/user/: New.html  ShowAll.html
static/user/New_files/: script.js
static/user/ShowAll_files/: script.js
