[package]
name = "LM"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2.2.8", features = ["postgres", "numeric"] }
askama = "0.12"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
actix-files = "0.6"
actix-cors = "0.7.0"
serde_json = "1.0"
env_logger = "0.11.6"



[dev-dependencies]
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }